# psx-demos

./: CMakeLists.txt  README.md  build-and-run.ps1  constants.h
3d_cube/: CMakeLists.txt
asteroids_ship/: CMakeLists.txt  README.md
asteroids_ship/src/: comm.c  comm.h  controller.c  controller.h  ship.c  ship.h
bg_scrolling/: CMakeLists.txt  trials.ase
bg_scrolling/src/: constants.h  main.c
psx_tutorial/: README.md  main.c
sprite_anim/: CMakeLists.txt  IRON_KNIGHT.TIM  README.md  iron_knight.ase
sprite_anim/src/: comm.c  constants.h  main.c  player.c  player.h
src/: controller.c  controller.h  main.c  ship.c
textured_poly/: CMakeLists.txt  COOLDOG.TIM  IRON_KNIGHT.TIM  README.md  WOOD.TIM  cooldog.ase  wood.ase
textured_poly/src/: comm.h  constants.h  cooldog.c  cooldog.h  main.c  player.c  player.h
